fix store_image_resized use less memory in vf_vector

--- a/submission_pipeline.ipynb
+++ b/submission_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -43,8 +43,8 @@
    },
    "outputs": [],
    "source": [
-    "X_train = load_images(type=\"train\")\n",
-    "n_train = X_train.shape[0]\n",
+    "#X_train = load_images(type=\"train\")\n",
+    "n_train = 5000#X_train.shape[0]\n",
     "Y_labels_train = load_labels()\n",
     "Y_train = dummy_code(Y_labels_train)\n",
     "n_classes = Y_train.shape[1]"
@@ -62,15 +62,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
-    "indices = np.random.permutation(X_train.shape[0])\n",
+    "indices = np.random.permutation(n_train)\n",
     "training_idx, test_idx = indices[:int(0.9*n_train)], indices[int(0.9*n_train):]"
    ]
   },
@@ -86,16 +86,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-
    "outputs": [],
    "source": [
-    "pins_dict_train = pins_generation(training_idx=training_idx, ratio_pins_per_image=33, patch_size=16)\n",
+    "ratio = 10\n",
+    "patch = 16\n",
+    "filter_s = 1\n",
+    "resized = True\n",
+    "\n",
+    "pins_dict_train = pins_generation(training_idx=training_idx, ratio_pins_per_image=ratio, patch_size=patch, filter_sigma=filter_s, resized=resized)\n",
     "pins_train = pins_dict_train[\"pins\"]\n",
     "train_pins = pins_dict_train[\"train_pins\"]\n",
     "pin_to_im_train = pins_dict_train[\"pin_to_im\"]\n",
@@ -104,14 +108,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrongly clusterized pins: 40409\n",
+      "Wrongly clusterized pins: 16809\n",
+      "Wrongly clusterized pins: 8417\n",
+      "Wrongly clusterized pins: 5248\n",
+      "Wrongly clusterized pins: 3731\n",
+      "Wrongly clusterized pins: 2937\n",
+      "Wrongly clusterized pins: 2456\n",
+      "Wrongly clusterized pins: 2019\n",
+      "Wrongly clusterized pins: 1647\n",
+      "Wrongly clusterized pins: 1298\n",
+      "Wrongly clusterized pins: 1102\n",
+      "Wrongly clusterized pins: 931\n",
+      "Wrongly clusterized pins: 812\n",
+      "Wrongly clusterized pins: 708\n",
+      "Wrongly clusterized pins: 612\n",
+      "Wrongly clusterized pins: 540\n",
+      "Wrongly clusterized pins: 468\n",
+      "Wrongly clusterized pins: 382\n",
+      "Wrongly clusterized pins: 318\n",
+      "Wrongly clusterized pins: 290\n",
+      "Wrongly clusterized pins: 257\n",
+      "Wrongly clusterized pins: 224\n",
+      "Wrongly clusterized pins: 217\n",
+      "Wrongly clusterized pins: 192\n",
+      "Wrongly clusterized pins: 213\n",
+      "Wrongly clusterized pins: 215\n",
+      "Wrongly clusterized pins: 214\n",
+      "Wrongly clusterized pins: 226\n",
+      "Wrongly clusterized pins: 209\n",
+      "Wrongly clusterized pins: 225\n",
+      "Wrongly clusterized pins: 201\n",
+      "Wrongly clusterized pins: 183\n",
+      "Wrongly clusterized pins: 165\n",
+      "Wrongly clusterized pins: 127\n",
+      "Wrongly clusterized pins: 115\n",
+      "Wrongly clusterized pins: 106\n",
+      "Wrongly clusterized pins: 97\n",
+      "Wrongly clusterized pins: 84\n",
+      "Wrongly clusterized pins: 54\n",
+      "Wrongly clusterized pins: 51\n",
+      "Wrongly clusterized pins: 47\n",
+      "Wrongly clusterized pins: 43\n",
+      "Wrongly clusterized pins: 44\n",
+      "Wrongly clusterized pins: 43\n",
+      "Wrongly clusterized pins: 44\n",
+      "Wrongly clusterized pins: 35\n",
+      "Wrongly clusterized pins: 30\n",
+      "Wrongly clusterized pins: 33\n",
+      "Wrongly clusterized pins: 39\n",
+      "Wrongly clusterized pins: 47\n",
+      "Wrongly clusterized pins: 42\n",
+      "Wrongly clusterized pins: 45\n",
+      "Wrongly clusterized pins: 46\n",
+      "Wrongly clusterized pins: 37\n",
+      "Wrongly clusterized pins: 29\n",
+      "Wrongly clusterized pins: 19\n",
+      "Wrongly clusterized pins: 14\n",
+      "Wrongly clusterized pins: 20\n",
+      "Wrongly clusterized pins: 26\n",
+      "Wrongly clusterized pins: 33\n",
+      "Wrongly clusterized pins: 43\n",
+      "Wrongly clusterized pins: 38\n",
+      "Wrongly clusterized pins: 36\n",
+      "Wrongly clusterized pins: 30\n",
+      "Wrongly clusterized pins: 30\n",
+      "Wrongly clusterized pins: 27\n",
+      "Wrongly clusterized pins: 26\n",
+      "Wrongly clusterized pins: 15\n",
+      "Wrongly clusterized pins: 10\n",
+      "Wrongly clusterized pins: 4\n",
+      "Wrongly clusterized pins: 0\n"
+     ]
+    }
+   ],
    "source": [
-    "sample_indices = np.random.permutation(pins_mat.shape[0])\n",
-    "visual_features = kmeans(pins_mat[indices[:12000]], 100)"
+    "n_pins = pins_mat.shape[0]\n",
+    "sample_indices = np.random.choice(n_pins, n_pins//4)\n",
+    "visual_features = kmeans(pins_mat[sample_indices], 100)"
    ]
   },
   {
@@ -126,13 +209,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
-
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
-
    },
    "outputs": [],
    "source": [
@@ -152,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -179,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -187,11 +268,11 @@
    },
    "outputs": [],
    "source": [
-    "#X_sample = np.sqrt(X_sample)\n",
-    "#X_test = np.sqrt(X_test)\n",
+    "X_sample = np.sqrt(X_sample)\n",
+    "X_test = np.sqrt(X_test)\n",
     "\n",
-    "#X_sample = X_sample / np.linalg.norm(X_sample, axis=1)[:, None]\n",
-    "#X_test = X_test / np.linalg.norm(X_test, axis=1)[:, None]\n"
+    "X_sample = X_sample / np.linalg.norm(X_sample, axis=1)[:, None]\n",
+    "X_test = X_test / np.linalg.norm(X_test, axis=1)[:, None]\n"
    ]
   },
   {
@@ -216,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -224,8 +305,9 @@
    },
    "outputs": [],
    "source": [
-    "kernel_type = \"hellinger\"\n",
-    "K_sample = kernel_matrix(X_sample, kernel_type=kernel_type)"
+    "kernel_type = \"rbf\"\n",
+    "sig = 0.1\n",
+    "K_sample = kernel_matrix(X_sample, kernel_type=kernel_type,sigma=sig)"
    ]
   },
   {
@@ -240,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -248,11 +330,11 @@
    },
    "outputs": [],
    "source": [
-    "classifier_type = \"linear regression\"\n",
+    "classifier_type = \"svm\"\n",
     "alpha = np.zeros((n_classes, n_sample))\n",
     "for dig in range(n_classes):\n",
     "    alpha[dig, :] = find_f(K_sample, Y_sample[:, dig],\n",
-    "                           prob_type=classifier_type, lamb=0.1)"
+    "                           prob_type=classifier_type, lamb=10)"
    ]
   },
   {
@@ -267,43 +349,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The precision on the test set is of 0.312\n"
+      "The precision on the test set is of 0.11\n"
      ]
     }
    ],
-
    "source": [
     "Y_pred = np.zeros((X_test.shape[0], n_classes))\n",
     "for dig in range(n_classes):\n",
     "    Y_pred[:, dig] = pred(X_sample, X_test, alpha[dig, :],\n",
-    "                          kernel_type=kernel_type)\n",
+    "                          kernel_type=kernel_type, sigma=sig)\n",
     "\n",
     "\n",
     "Y_labels_pred = np.argmax(Y_pred, axis=1)\n",
     "prec = np.mean(Y_labels_pred == Y_labels_train[test_idx])\n",
     "print(\"The precision on the test set is of {}\".format(prec))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -317,32 +388,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'os' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-8e94499be72b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;31m# Submission\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0mlabels_to_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY_labels_eval\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkernel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkernel_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malgo\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mclassifier_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muser\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'PdT'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/home/pierre/MVA/kernel-digits-challenge/tools/submission.py\u001b[0m in \u001b[0;36mlabels_to_csv\u001b[0;34m(Y, kernel, algo, user, file_name)\u001b[0m\n\u001b[1;32m     26\u001b[0m         )\n\u001b[1;32m     27\u001b[0m     \u001b[0moutfolder_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"submissions\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutfolder_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m         \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutfolder_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_eval = load_images(type=\"test\")\n",
     "n_eval = X_eval.shape[0]\n",
     "\n",
     "# Visual features for submission\n",
-    "pins_dict_eval = pins_generation(data_type=\"test\",ratio_pins_per_image=33, patch_size=9)\n",
+    "pins_dict_eval = pins_generation(data_type=\"test\",ratio_pins_per_image=ratio, patch_size=patch, filter_ssigma= filter_s, resized=resized)\n",
     "pins_eval = pins_dict_eval[\"pins\"]\n",
     "pin_to_im_eval = pins_dict_eval[\"pin_to_im\"]\n",
     "\n",
