tested hog with sklearn

--- a/submission_pipeline-Pierre.ipynb
+++ b/submission_pipeline-Pierre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -116,59 +116,66 @@
      "output_type": "stream",
      "text": [
       "(9000, 16)\n",
-      "Wrongly clusterized pins: 8893\n",
-      "Wrongly clusterized pins: 2936\n",
-      "Wrongly clusterized pins: 1604\n",
-      "Wrongly clusterized pins: 1075\n",
-      "Wrongly clusterized pins: 824\n",
-      "Wrongly clusterized pins: 597\n",
-      "Wrongly clusterized pins: 441\n",
+      "Wrongly clusterized pins: 8865\n",
+      "Wrongly clusterized pins: 3254\n",
+      "Wrongly clusterized pins: 1567\n",
+      "Wrongly clusterized pins: 1013\n",
+      "Wrongly clusterized pins: 747\n",
+      "Wrongly clusterized pins: 591\n",
+      "Wrongly clusterized pins: 481\n",
+      "Wrongly clusterized pins: 437\n",
       "Wrongly clusterized pins: 352\n",
       "Wrongly clusterized pins: 290\n",
-      "Wrongly clusterized pins: 265\n",
-      "Wrongly clusterized pins: 239\n",
-      "Wrongly clusterized pins: 217\n",
-      "Wrongly clusterized pins: 201\n",
-      "Wrongly clusterized pins: 173\n",
-      "Wrongly clusterized pins: 154\n",
-      "Wrongly clusterized pins: 157\n",
-      "Wrongly clusterized pins: 136\n",
-      "Wrongly clusterized pins: 126\n",
+      "Wrongly clusterized pins: 282\n",
+      "Wrongly clusterized pins: 272\n",
+      "Wrongly clusterized pins: 213\n",
+      "Wrongly clusterized pins: 169\n",
+      "Wrongly clusterized pins: 166\n",
+      "Wrongly clusterized pins: 153\n",
+      "Wrongly clusterized pins: 148\n",
+      "Wrongly clusterized pins: 146\n",
+      "Wrongly clusterized pins: 124\n",
+      "Wrongly clusterized pins: 119\n",
       "Wrongly clusterized pins: 104\n",
-      "Wrongly clusterized pins: 108\n",
-      "Wrongly clusterized pins: 80\n",
-      "Wrongly clusterized pins: 77\n",
-      "Wrongly clusterized pins: 69\n",
-      "Wrongly clusterized pins: 87\n",
-      "Wrongly clusterized pins: 89\n",
-      "Wrongly clusterized pins: 71\n",
-      "Wrongly clusterized pins: 61\n",
-      "Wrongly clusterized pins: 54\n",
-      "Wrongly clusterized pins: 39\n",
-      "Wrongly clusterized pins: 49\n",
-      "Wrongly clusterized pins: 52\n",
-      "Wrongly clusterized pins: 38\n",
-      "Wrongly clusterized pins: 49\n",
-      "Wrongly clusterized pins: 41\n",
-      "Wrongly clusterized pins: 45\n",
+      "Wrongly clusterized pins: 95\n",
+      "Wrongly clusterized pins: 82\n",
+      "Wrongly clusterized pins: 72\n",
+      "Wrongly clusterized pins: 74\n",
+      "Wrongly clusterized pins: 70\n",
+      "Wrongly clusterized pins: 58\n",
+      "Wrongly clusterized pins: 59\n",
+      "Wrongly clusterized pins: 47\n",
+      "Wrongly clusterized pins: 33\n",
       "Wrongly clusterized pins: 36\n",
-      "Wrongly clusterized pins: 30\n",
-      "Wrongly clusterized pins: 38\n",
-      "Wrongly clusterized pins: 30\n",
+      "Wrongly clusterized pins: 40\n",
+      "Wrongly clusterized pins: 37\n",
       "Wrongly clusterized pins: 31\n",
+      "Wrongly clusterized pins: 29\n",
+      "Wrongly clusterized pins: 21\n",
+      "Wrongly clusterized pins: 21\n",
+      "Wrongly clusterized pins: 21\n",
+      "Wrongly clusterized pins: 21\n",
       "Wrongly clusterized pins: 28\n",
-      "Wrongly clusterized pins: 25\n",
-      "Wrongly clusterized pins: 23\n",
-      "Wrongly clusterized pins: 18\n",
+      "Wrongly clusterized pins: 30\n",
+      "Wrongly clusterized pins: 34\n",
+      "Wrongly clusterized pins: 26\n",
+      "Wrongly clusterized pins: 26\n",
+      "Wrongly clusterized pins: 20\n",
+      "Wrongly clusterized pins: 20\n",
       "Wrongly clusterized pins: 15\n",
-      "Wrongly clusterized pins: 22\n",
-      "Wrongly clusterized pins: 22\n",
-      "Wrongly clusterized pins: 14\n",
-      "Wrongly clusterized pins: 18\n",
-      "Wrongly clusterized pins: 12\n",
+      "Wrongly clusterized pins: 15\n",
+      "Wrongly clusterized pins: 19\n",
+      "Wrongly clusterized pins: 13\n",
       "Wrongly clusterized pins: 10\n",
       "Wrongly clusterized pins: 7\n",
-      "Wrongly clusterized pins: 5\n",
+      "Wrongly clusterized pins: 7\n",
+      "Wrongly clusterized pins: 4\n",
+      "Wrongly clusterized pins: 3\n",
+      "Wrongly clusterized pins: 1\n",
+      "Wrongly clusterized pins: 3\n",
+      "Wrongly clusterized pins: 2\n",
+      "Wrongly clusterized pins: 4\n",
+      "Wrongly clusterized pins: 2\n",
       "Wrongly clusterized pins: 1\n",
       "Wrongly clusterized pins: 0\n"
      ]
@@ -316,6 +323,75 @@
     "for dig in range(n_classes):\n",
     "    alpha[dig, :] = find_f(K_sample, Y_sample[:, dig],\n",
     "                           prob_type=classifier_type, lamb=70, n_iter=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SVM test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "SVC_dict = {}\n",
+    "for dig in range(n_classes):\n",
+    "    clf = SVC( kernel='linear')\n",
+    "    clf.fit(X_sample, Y_sample[:,dig]) \n",
+    "    SVC_dict[dig] = clf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The precision on the test set is of 0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "Y_pred = np.zeros((X_test.shape[0], n_classes))\n",
+    "for dig in range(n_classes):\n",
+    "    Y_pred[:, dig] = SVC_dict[dig].predict(X_test)\n",
+    "Y_labels_pred = np.argmax(Y_pred, axis=1)\n",
+    "prec = np.mean(Y_labels_pred == Y_labels_train[test_idx])\n",
+    "print(\"The precision on the test set is of {}\".format(prec))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_pred.sum()"
    ]
   },
   {
