--- a/submission_pipeline.ipynb
+++ b/submission_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -35,16 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
-    "#X_train = load_images(type=\"train\")\n",
-    "n_train = 5000#X_train.shape[0]\n",
+    "X_train = load_images(type=\"train\")\n",
+    "n_train = X_train.shape[0]\n",
     "Y_labels_train = load_labels()\n",
     "Y_train = dummy_code(Y_labels_train)\n",
     "n_classes = Y_train.shape[1]"
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -71,7 +71,7 @@
    "outputs": [],
    "source": [
     "indices = np.random.permutation(n_train)\n",
-    "training_idx, test_idx = indices[:int(0.9*n_train)], indices[int(0.9*n_train):]"
+    "training_idx, test_idx = indices[:int(0.8*n_train)], indices[int(0.8*n_train):]"
    ]
   },
   {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -108,89 +108,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wrongly clusterized pins: 40409\n",
-      "Wrongly clusterized pins: 16809\n",
-      "Wrongly clusterized pins: 8417\n",
-      "Wrongly clusterized pins: 5248\n",
-      "Wrongly clusterized pins: 3731\n",
-      "Wrongly clusterized pins: 2937\n",
-      "Wrongly clusterized pins: 2456\n",
-      "Wrongly clusterized pins: 2019\n",
-      "Wrongly clusterized pins: 1647\n",
-      "Wrongly clusterized pins: 1298\n",
-      "Wrongly clusterized pins: 1102\n",
-      "Wrongly clusterized pins: 931\n",
-      "Wrongly clusterized pins: 812\n",
-      "Wrongly clusterized pins: 708\n",
-      "Wrongly clusterized pins: 612\n",
-      "Wrongly clusterized pins: 540\n",
-      "Wrongly clusterized pins: 468\n",
-      "Wrongly clusterized pins: 382\n",
-      "Wrongly clusterized pins: 318\n",
-      "Wrongly clusterized pins: 290\n",
-      "Wrongly clusterized pins: 257\n",
-      "Wrongly clusterized pins: 224\n",
-      "Wrongly clusterized pins: 217\n",
-      "Wrongly clusterized pins: 192\n",
-      "Wrongly clusterized pins: 213\n",
-      "Wrongly clusterized pins: 215\n",
-      "Wrongly clusterized pins: 214\n",
-      "Wrongly clusterized pins: 226\n",
-      "Wrongly clusterized pins: 209\n",
-      "Wrongly clusterized pins: 225\n",
-      "Wrongly clusterized pins: 201\n",
-      "Wrongly clusterized pins: 183\n",
-      "Wrongly clusterized pins: 165\n",
-      "Wrongly clusterized pins: 127\n",
-      "Wrongly clusterized pins: 115\n",
-      "Wrongly clusterized pins: 106\n",
-      "Wrongly clusterized pins: 97\n",
-      "Wrongly clusterized pins: 84\n",
-      "Wrongly clusterized pins: 54\n",
-      "Wrongly clusterized pins: 51\n",
-      "Wrongly clusterized pins: 47\n",
-      "Wrongly clusterized pins: 43\n",
-      "Wrongly clusterized pins: 44\n",
-      "Wrongly clusterized pins: 43\n",
-      "Wrongly clusterized pins: 44\n",
-      "Wrongly clusterized pins: 35\n",
-      "Wrongly clusterized pins: 30\n",
-      "Wrongly clusterized pins: 33\n",
-      "Wrongly clusterized pins: 39\n",
-      "Wrongly clusterized pins: 47\n",
-      "Wrongly clusterized pins: 42\n",
-      "Wrongly clusterized pins: 45\n",
-      "Wrongly clusterized pins: 46\n",
-      "Wrongly clusterized pins: 37\n",
-      "Wrongly clusterized pins: 29\n",
-      "Wrongly clusterized pins: 19\n",
-      "Wrongly clusterized pins: 14\n",
-      "Wrongly clusterized pins: 20\n",
-      "Wrongly clusterized pins: 26\n",
-      "Wrongly clusterized pins: 33\n",
-      "Wrongly clusterized pins: 43\n",
-      "Wrongly clusterized pins: 38\n",
-      "Wrongly clusterized pins: 36\n",
-      "Wrongly clusterized pins: 30\n",
-      "Wrongly clusterized pins: 30\n",
-      "Wrongly clusterized pins: 27\n",
-      "Wrongly clusterized pins: 26\n",
-      "Wrongly clusterized pins: 15\n",
-      "Wrongly clusterized pins: 10\n",
-      "Wrongly clusterized pins: 4\n",
-      "Wrongly clusterized pins: 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n_pins = pins_mat.shape[0]\n",
     "sample_indices = np.random.choice(n_pins, n_pins//4)\n",
@@ -209,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -233,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -260,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -297,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -322,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -349,21 +273,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The precision on the test set is of 0.11\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Y_pred = np.zeros((X_test.shape[0], n_classes))\n",
     "for dig in range(n_classes):\n",
@@ -388,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -426,7 +342,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
