tuned grid search both for color grad and big images

--- a/grid_search_color.ipynb
+++ b/grid_search_color.ipynb
@@ -48,13 +48,11 @@
    },
    "outputs": [],
    "source": [
-    "X_train = load_images_resized(type=\"train\")\n",
+    "X_train = load_images(type=\"train\")\n",
     "n_train = X_train.shape[0]\n",
     "Y_labels_train = load_labels()\n",
     "Y_train = dummy_code(Y_labels_train)\n",
-    "n_classes = Y_train.shape[1]\n",
-    "X_train = X_train - X_train.min(axis=0)\n",
-    "X_train = X_train / X_train.max(axis=0)"
+    "n_classes = Y_train.shape[1]"
    ]
   },
   {
@@ -67,10 +65,7 @@
    },
    "outputs": [],
    "source": [
-    "X_train2 = np.zeros((5000,63,63,3))\n",
-    "for i in range(3):\n",
-    "    X_train2[:,:,:,i] = X_train\n",
-    "image_list = X_train2"
+    "image_list = reshape_as_images(X_train)"
    ]
   },
   {
@@ -131,7 +126,8 @@
     "            filter_sigma=filter_sigma,\n",
     "            filter_shape=filter_shape,\n",
     "            hog_cell_size=hog_cell_size,\n",
-    "            disc_grid=disc_grid))\n",
+    "            disc_grid=disc_grid,\n",
+    "            color_grad=True))\n",
     "    \n",
     "n_features = hog_list[0].size\n",
     "X_hog = np.array(hog_list).reshape((n_images, n_features)) \n"
@@ -157,12 +153,30 @@
    },
    "outputs": [],
    "source": [
-    "indices = np.random.permutation(X_hog.shape[0])\n",
-    "training_idx, test_idx = indices[:int(0.9*n_train)], indices[int(0.9*n_train):]\n",
-    "\n",
+    "training_idx = []\n",
+    "test_idx = []\n",
+    "train_frac = 1\n",
+    "for dig in tqdm_notebook(range(n_classes), desc=\"Classes\"):\n",
+    "    selected_indices = np.random.permutation(np.sum(Y_labels_train == dig))\n",
+    "    n_class = len(selected_indices)\n",
+    "    class_indices = np.where(Y_labels_train == dig)[0]\n",
+    "    training_idx += list(map(int, class_indices[selected_indices[:int(train_frac*n_class)]]))\n",
+    "    test_idx += list(map(int,class_indices[selected_indices[int(train_frac*n_class):]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
     "X_sample = X_hog[training_idx, :]\n",
     "n_sample = X_sample.shape[0]\n",
-    "Y_sample = Y_train[training_idx,:]\n",
+    "Y_sample = Y_train[training_idx, :]\n",
     "Y_labels_sample = Y_labels_train[training_idx]\n",
     "\n",
     "X_test = X_hog[test_idx, :]\n",
@@ -237,7 +251,7 @@
     "editable": true
    },
    "source": [
-    "## Kernel choice"
+    "## Classifier choice"
    ]
   },
   {
@@ -249,7 +263,7 @@
    "outputs": [],
    "source": [
     "classifier_type = \"fast_svm\"\n",
-    "n_iter = 60000"
+    "n_iter=60000"
    ]
   },
   {
@@ -259,7 +273,7 @@
     "editable": true
    },
    "source": [
-    "## Classifier choice"
+    "## Kernel choice"
    ]
   },
   {
@@ -289,7 +303,7 @@
    "outputs": [],
    "source": [
     "kernel_type=\"rbf\"\n",
-    "sigma = 15.5\n",
+    "sigma = 1\n",
     "lamb = 1e-8"
    ]
   },
@@ -449,7 +463,7 @@
     "    out_q.put(\n",
     "        [\n",
     "            dig,\n",
-    "            find_f(**kwargs)\n",
+    "            find_f(**kwargs)            \n",
     "        ]\n",
     "    )"
    ]
@@ -475,60 +489,68 @@
    "outputs": [],
    "source": [
     "kernel_type = \"polynomial\"\n",
-    "degrees = [4, 5, 6]\n",
+    "degrees = [4]\n",
     "n_degrees = len(degrees)\n",
-    "constants = [1, 5, 50, 100]\n",
+    "constants = [1]\n",
     "n_constants = len(constants)\n",
-    "lambs = [1e-9, 1e-5, 0.1, 1]\n",
+    "lambs = [1]\n",
     "n_lambs = len(lambs)\n",
-    "train_prec = np.zeros((n_degrees, n_constants, n_lambs))\n",
-    "test_prec = np.zeros((n_degrees, n_constants, n_lambs))\n",
+    "weights = [5, 10, 50, 1000]\n",
+    "n_weights = len(weights)\n",
+    "train_prec = np.zeros((n_degrees, n_constants, n_lambs, n_weights))\n",
+    "test_prec = np.zeros((n_degrees, n_constants, n_lambs, n_weights))\n",
     "for d in tqdm_notebook(range(n_degrees), desc=\"Degrees\"):\n",
     "    for c in tqdm_notebook(range(n_constants), desc=\"Constants\"):\n",
     "        # Kernel matrix computation\n",
     "        K_sample = kernel_matrix(\n",
     "            X_sample, kernel_type=kernel_type, degree=degrees[d], constant=constants[c], inner=train_inner)\n",
     "        for l in tqdm_notebook(range(n_lambs), desc=\"Lambdas\"):\n",
-    "            # Coordinate ascent with multiprocessing\n",
-    "            alpha = np.zeros((n_classes, n_sample))\n",
-    "            out_q = Queue()\n",
-    "            procs = list()\n",
-    "            for dig in range(n_classes):\n",
-    "                p = Process(\n",
-    "                    target=coordinate_ascent,\n",
-    "                    args=(out_q, dig),\n",
-    "                    kwargs={\n",
-    "                        \"K\":K_sample, \"Y\":Y_sample[:, dig], \"prob_type\":classifier_type, \"lamb\":lambs[l], \"n_iter\":40000\n",
-    "                    }\n",
-    "                )\n",
-    "                procs.append(p)\n",
-    "                p.start()\n",
-    "            for i in range(n_classes):\n",
-    "                res = out_q.get()\n",
-    "                alpha[res[0], :] = res[1]\n",
+    "            for w in tqdm_notebook(range(n_weights), desc=\"Weights\"):\n",
+    "                # Coordinate ascent with multiprocessing\n",
+    "                alpha = np.zeros((n_classes, n_sample))\n",
+    "                out_q = Queue()\n",
+    "                procs = list()\n",
+    "                for dig in range(n_classes):\n",
+    "                    weights = np.ones(n_sample)\n",
+    "                    weights[Y_labels_sample == dig] *= weights[w]\n",
+    "                    p = Process(\n",
+    "                        target=coordinate_ascent,\n",
+    "                        args=(out_q, dig),\n",
+    "                        kwargs={\n",
+    "                            \"K\":K_sample,\n",
+    "                            \"Y\":Y_sample[:, dig],\n",
+    "                            \"weights\": weights,\n",
+    "                            \"prob_type\":classifier_type, \"lamb\":lambs[l], \"n_iter\":100000\n",
+    "                        }\n",
+    "                    )\n",
+    "                    procs.append(p)\n",
+    "                    p.start()\n",
+    "                for i in range(n_classes):\n",
+    "                    res = out_q.get()\n",
+    "                    alpha[res[0], :] = res[1]\n",
     "\n",
-    "            for p in procs:\n",
-    "                p.join()\n",
-    "            # Precision on train set\n",
-    "            Y_pred_train = pred(\n",
-    "                X_sample, X_sample[:500], alpha,\n",
-    "                kernel_type=kernel_type,\n",
-    "                degree=degrees[d],\n",
-    "                constant=constants[c],\n",
-    "                inner=train_test_inner)\n",
+    "                for p in procs:\n",
+    "                    p.join()\n",
+    "                # Precision on train set\n",
+    "                Y_pred_train = pred(\n",
+    "                    X_sample, X_sample[:500], alpha,\n",
+    "                    kernel_type=kernel_type,\n",
+    "                    degree=degrees[d],\n",
+    "                    constant=constants[c],\n",
+    "                    inner=train_test_inner)\n",
     "\n",
-    "            Y_labels_pred_train = np.argmax(Y_pred_train, axis=1)\n",
-    "            train_prec[d, c, l] = np.mean(Y_labels_pred_train == Y_labels_sample[:500])\n",
-    "            # Precision on test set\n",
-    "            Y_pred= pred(\n",
-    "                X_sample, X_test, alpha,\n",
-    "                kernel_type=kernel_type,\n",
-    "                degree=degrees[d],\n",
-    "                constant=constants[c],\n",
-    "                inner=test_inner)\n",
+    "                Y_labels_pred_train = np.argmax(Y_pred_train, axis=1)\n",
+    "                train_prec[d, c, l, w] = np.mean(Y_labels_pred_train == Y_labels_sample[:500])\n",
+    "                # Precision on test set\n",
+    "                Y_pred= pred(\n",
+    "                    X_sample, X_test, alpha,\n",
+    "                    kernel_type=kernel_type,\n",
+    "                    degree=degrees[d],\n",
+    "                    constant=constants[c],\n",
+    "                    inner=test_inner)\n",
     "\n",
-    "            Y_labels_pred = np.argmax(Y_pred, axis=1)\n",
-    "            test_prec[d, c, l] = np.mean(Y_labels_pred == Y_labels_test)"
+    "                Y_labels_pred = np.argmax(Y_pred, axis=1)\n",
+    "                test_prec[d, c, l, w] = np.mean(Y_labels_pred == Y_labels_test)"
    ]
   },
   {
@@ -578,48 +600,56 @@
    "outputs": [],
    "source": [
     "kernel_type=\"rbf\"\n",
-    "sigmas = [13, 13.2, 13.5, 13.7]\n",
+    "sigmas = [1.5]\n",
     "n_sigmas = len(sigmas)\n",
+    "weights = [10]\n",
+    "n_weights = len(weights)\n",
     "lambs = [1e-8]\n",
     "n_lambs = len(lambs)\n",
-    "train_prec_rbf = np.zeros((n_sigmas, n_lambs))\n",
-    "test_prec_rbf = np.zeros((n_sigmas, n_lambs))\n",
+    "train_prec_rbf = np.zeros((n_sigmas, n_lambs, n_weights))\n",
+    "test_prec_rbf = np.zeros((n_sigmas, n_lambs, n_weights))\n",
     "for s in tqdm_notebook(range(n_sigmas), desc=\"Sigmas\"):\n",
     "    # Kernel matrix computation\n",
     "    K_sample = kernel_matrix(X_sample, kernel_type=kernel_type, sigma=sigmas[s], dist=train_dist)\n",
     "    for l in tqdm_notebook(range(n_lambs), desc=\"Lambdas\"):\n",
-    "        # Coordinate ascent with multiprocessing\n",
-    "        alpha = np.zeros((n_classes, n_sample))\n",
-    "        out_q = Queue()\n",
-    "        procs = list()\n",
-    "        for dig in range(n_classes):\n",
-    "            p = Process(\n",
-    "                target=coordinate_ascent,\n",
-    "                args=(out_q, dig),\n",
-    "                kwargs={\n",
-    "                    \"K\":K_sample, \"Y\":Y_sample[:, dig], \"prob_type\":classifier_type, \"lamb\":lambs[l], \"n_iter\":40000\n",
-    "                }\n",
-    "            )\n",
-    "            procs.append(p)\n",
-    "            p.start()\n",
-    "        for i in range(n_classes):\n",
-    "            res = out_q.get()\n",
-    "            alpha[res[0], :] = res[1]\n",
+    "        for w in tqdm_notebook(range(n_weights), desc=\"Weights\"):\n",
+    "            # Coordinate ascent with multiprocessing\n",
+    "            alpha = np.zeros((n_classes, n_sample))\n",
+    "            out_q = Queue()\n",
+    "            procs = list()\n",
+    "            for dig in range(n_classes):\n",
+    "                weights = np.ones(n_sample)\n",
+    "                weights[Y_labels_sample == dig] *= weights[w]\n",
+    "                p = Process(\n",
+    "                    target=coordinate_ascent,\n",
+    "                    args=(out_q, dig),\n",
+    "                    kwargs={\n",
+    "                        \"K\":K_sample,\n",
+    "                        \"Y\":Y_sample[:, dig],\n",
+    "                        \"weights\": weights,\n",
+    "                        \"prob_type\":classifier_type, \"lamb\":lambs[l], \"n_iter\":100000\n",
+    "                    }\n",
+    "                )\n",
+    "                procs.append(p)\n",
+    "                p.start()\n",
+    "            for i in range(n_classes):\n",
+    "                res = out_q.get()\n",
+    "                alpha[res[0], :] = res[1]\n",
     "\n",
-    "        for p in procs:\n",
-    "            p.join()\n",
-    "        # Precision on train set\n",
-    "        Y_pred_train= pred(X_sample, X_sample[:500], alpha,\n",
-    "                              kernel_type=kernel_type, sigma=sigmas[s], dist=train_test_dist)\n",
-    "        Y_labels_pred_train = np.argmax(Y_pred_train, axis=1)\n",
-    "        train_prec_rbf[s, l] = np.mean(Y_labels_pred_train == Y_labels_sample[:500])\n",
-    "        # Precision on test set\n",
-    "        Y_pred = pred(X_sample, X_test, alpha,\n",
-    "                              kernel_type=kernel_type, sigma=sigmas[s], dist=test_dist)\n",
+    "            for p in procs:\n",
+    "                p.join()\n",
+    "            # Precision on train set\n",
+    "            Y_pred_train= pred(X_sample, X_sample[:500], alpha,\n",
+    "                                  kernel_type=kernel_type, sigma=sigmas[s], dist=train_test_dist)\n",
+    "            Y_labels_pred_train = np.argmax(Y_pred_train, axis=1)\n",
+    "            train_prec_rbf[s, l, w] = np.mean(Y_labels_pred_train == Y_labels_sample[:500])\n",
+    "            # Precision on test set\n",
+    "            Y_pred = pred(X_sample, X_test, alpha,\n",
+    "                                  kernel_type=kernel_type, sigma=sigmas[s], dist=test_dist)\n",
     "\n",
     "\n",
-    "        Y_labels_pred = np.argmax(Y_pred, axis=1)\n",
-    "        test_prec_rbf[s, l] = np.mean(Y_labels_pred == Y_labels_test)"
+    "            Y_labels_pred = np.argmax(Y_pred, axis=1)\n",
+    "            test_prec_rbf[s, l, w] = np.mean(Y_labels_pred == Y_labels_test)"
    ]
   },
   {
@@ -668,14 +698,10 @@
    },
    "outputs": [],
    "source": [
-    "X_eval = load_images_resized(type=\"test\")\n",
-    "X_eval = X_eval - X_eval.min(axis=0)\n",
-    "X_eval = X_eval / X_eval.max(axis=0)\n",
+    "X_eval = load_images(type=\"test\")\n",
     "n_eval = X_eval.shape[0]\n",
-    "X_eval2 = np.zeros((2000,63,63,3))\n",
-    "for i in range(3):\n",
-    "    X_eval2[:,:,:,i] = X_eval\n",
-    "image_list_eval = X_eval2\n",
+    "\n",
+    "image_list_eval = reshape_as_images(X_eval)\n",
     "\n",
     "# Visual features for submission\n",
     "hog_list_eval = []\n",
@@ -687,7 +713,8 @@
     "            filter_sigma=filter_sigma,\n",
     "            filter_shape=filter_shape,\n",
     "            hog_cell_size=hog_cell_size,\n",
-    "            disc_grid=disc_grid))\n",
+    "            disc_grid=disc_grid,\n",
+    "            color_grad=True))\n",
     "    \n",
     "n_features = hog_list_eval[0].size\n",
     "X_hog_eval = np.array(hog_list_eval).reshape((n_eval, n_features)) "
@@ -711,7 +738,7 @@
     "\n",
     "\n",
     "# Submission\n",
-    "labels_to_csv(Y_labels_eval, kernel=kernel_type, algo=\"svm_hog\",user=\"Zac_big_images\")"
+    "labels_to_csv(Y_labels_eval, kernel=kernel_type, algo=\"svm_hog\",user=\"Zac_color_grad\")"
    ]
   },
   {
